--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ iframe {
 }
 
 .text{
-    font:'Roboto', sans-serif;
+    font-family: 'Permanent Marker', sans-serif;
     margin-left: 10px;
     margin-right: 10px;
 }
